# cautious-dollop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DNS_PROVIDERS_METRICS.md  DOCUMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  benchmark_test.py  config.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_baseline.py  test_profile.py
config/: config.example.json  config.yaml
dns_bench/: __init__.py  cli.py  config.py  engine.py  exceptions.py  exporters.py  providers.py
src/dns_bench/: __init__.py  __main__.py  benchmark.py  cli.py  resolver.py  results.py
src/dns_bench/config/: __init__.py  loader.py  models.py
src/dns_bench/core/: __init__.py  di.py
src/local_dns/: __init__.py  cli.py  detector.py
tests/: __init__.py  test_detector.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_benchmark.py  test_config.py  test_resolver.py  test_results.py
