[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-dns-tool"
version = "0.1.0"
description = "Cross-platform local DNS resolver detection CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["pytest>=7.4"]

[project.scripts]
local-dns = "local_dns.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
