[tool.poetry]
name = "dns-bench"
version = "0.1.0"
description = "DNS resolver benchmark tool with CLI support"
authors = ["DNS Bench Contributors"]
readme = "README.md"
packages = [
    { include = "dns_bench", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
dnspython = "^2.4"
click = "^8.1"
rich = "^13.7"
asyncio-contextmanager = "^1.0"
aiohttp = "^3.9"
pydantic = "^2.5"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
black = "^23.12"
isort = "^5.13"
flake8 = "^6.1"
mypy = "^1.7"
types-pyyaml = "^6.0"

[tool.poetry.scripts]
dns-bench = "dns_bench.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
